--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,8 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
   <script src="index.js"></script>
+  <script src="db.js"></script>
 </body>
 </html>
